--- a/vc-semantics.tex
+++ b/vc-semantics.tex
@@ -117,6 +117,7 @@ respectively.
 initial state.
 
 \begin{definition}[Ancestor]
+  \label{def:ancestor}
   In version history DAG $G = (V,E)$, version $v_0 \in V$ is said
   to be a (causal) ancestor of $v_1 \in V$ iff $v_0 \reaches v_1$.
   Versions $v_0, v_1 \in V$ are causally related iff either $v_0
