--- a/quark.tex
+++ b/quark.tex
@@ -73,8 +73,8 @@
 \begin{document}
 
 %% Title information
-\title[Convergence Sans Commutativity]{A Runtime-Assisted Approach To
-Convergence in Replicated Data Types}      %% [Short Title] is optional;
+\title[]{Runtime-Assisted Convergence in Replicated Data Types}
+%% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
 %\titlenote{with title note}             %% \titlenote is optional;
