Edits to abstract and introduction

--- a/concrete-semantics.tex
+++ b/concrete-semantics.tex
@@ -144,7 +144,7 @@ not extend the version history graph, and therefore has no counterpart
 in Fig.~\ref{fig:git-semantics}. It merely updates replica $i$'s
 knowledge of branch $b_k$ if replica $j$ happens to have later updates
 from $k$, i.e., $H_j(b_k)$ happens to be ahead of $H_i(b_k)$. The new
-versions on $b_k$ known to $j$ but not $i$ are then simply transferred
-to $i$.
+versions on $b_k$ known to $j$ but not $i$ are then simply replicated
+at $i$.
 
 
