--- a/motivation.tex
+++ b/motivation.tex
@@ -104,7 +104,7 @@ end
 \label{fig:cc-set}
 \end{figure}
 
-\noindent\paragraph{\emph{Add-Wins} Set CRDT} Unfortunately, \C{Set}
+\noindent\paragraph{Add-Wins Set CRDT} Unfortunately, \C{Set}
 data type of Fig.~\ref{fig:cc-set} still admits divergent executions
 due to concurrent updates.  Fig.~\ref{fig:crdt-execs-2} describes one
 such execution. Here, replicas $R_1$ and $R_2$ both start with a
