--- a/quark.tex
+++ b/quark.tex
@@ -206,9 +206,11 @@
 
 \input{motivation}
 
-\input{vc-semantics}
+\input{abstract-semantics}
 
 \input{concrete-semantics}
+
+\input{implementation}
 
 
 %% Acknowledgments
